update analytics & add adsense

--- a/aeon-system/special-style-section.css
+++ b/aeon-system/special-style-section.css
@@ -776,6 +776,12 @@ footer .inner { padding:10px 15px; }
 .footer-left { float:left; }
 .footer-right { float:right; }
 
+/* ADS */
+.ad-container {
+  text-align:center;
+  margin:15px 0;
+}
+.ad-container.ad-top { margin-bottom:40px; }
 
 /* responsive thingies */
 @media (max-width:900px) {
